--- a/ValueTechNZ_Final/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
+++ b/ValueTechNZ_Final/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
@@ -1,4 +1,5 @@
-﻿@inject SignInManager<IdentityUser> SignInManager
+﻿@using ValueTechNZ_Final.Models;
+@inject SignInManager<ApplicationUser> SignInManager
 @{
     var hasExternalLogins = (await SignInManager.GetExternalAuthenticationSchemesAsync()).Any();
 }
