Get Products Pagination working

--- a/ValueTechNZ_Final/Views/Products/GetProducts.cshtml
+++ b/ValueTechNZ_Final/Views/Products/GetProducts.cshtml
@@ -1,7 +1,9 @@
-﻿@model List<ValueTechNZ_Final.Models.Dto.GetProductsDto>
+﻿@using ValueTechNZ_Final.Helpers;
+@model PaginatedList<ValueTechNZ_Final.Models.Dto.GetProductsDto>
 
 @{
     ViewData["Title"] = "Product List";
+    ViewData["PaginationAction"] = "GetProducts";
 }
 
 <h2 class="text-center mb-5">@ViewData["Title"]</h2>
@@ -32,14 +34,14 @@
         </tr>
     </thead>
     <tbody>
-        @if(Model == null || Model.Count == 0)
+        @if(Model == null || Model.Items.Count == 0)
         {
             <tr>
                 <td class="text-center" colspan="8">No items available</td>
             </tr>
         }
 
-        @foreach(var product in Model)
+        @foreach(var product in Model.Items)
         {
             <tr>
                 <td class="text-center">@product.ProductId</td>
@@ -57,3 +59,5 @@
         }
     </tbody>
 </table>
+
+<partial name="_Pagination" />
