--- a/ValueTechNZ_Final/Views/Products/GetProducts.cshtml
+++ b/ValueTechNZ_Final/Views/Products/GetProducts.cshtml
@@ -6,6 +6,8 @@
     ViewData["PaginationAction"] = "GetProducts";
 }
 
+<partial name="_Notification" />
+
 <h2 class="text-center mb-5">@ViewData["Title"]</h2>
 
 <div class="row mb-5">
