Add product working

--- a/ValueTechNZ_Final/Views/Products/GetProducts.cshtml
+++ b/ValueTechNZ_Final/Views/Products/GetProducts.cshtml
@@ -12,7 +12,7 @@
 
 <div class="row mb-5">
     <div class="col">
-        <a class="btn btn-primary btn-sm" asp-controller="Products" asp-action="Create">New Products</a>
+        <a class="btn btn-primary btn-sm" asp-controller="Products" asp-action="AddProduct">New Products</a>
     </div>
     <div class="col-4">
         <form role="search" class="d-flex">
