Fix Sort in GetProducts

--- a/ValueTechNZ_Final/Views/Products/GetProducts.cshtml
+++ b/ValueTechNZ_Final/Views/Products/GetProducts.cshtml
@@ -4,6 +4,8 @@
 @{
     ViewData["Title"] = "Product List";
     ViewData["PaginationAction"] = "GetProducts";
+    var currentSort = Context.Request.Query["sortColumn"].ToString();
+    var currentOrder = Context.Request.Query["sortOrder"].ToString();
 }
 
 <partial name="_Notification" />
@@ -25,13 +27,110 @@
 <table class="table">
     <thead>
         <tr>
-            <th class="text-center">ID</th>
-            <th class="text-center">Product</th>
-            <th class="text-center">Brand</th>
-            <th class="text-center">Category</th>
-            <th class="text-center">Price</th>
+            <th class="text-center">
+                <a asp-action="GetProducts"
+                   asp-route-sortColumn="id"
+                   asp-route-sortOrder="@(currentSort == "id" && currentOrder == "asc" ? "desc" : "asc")"
+                   asp-route-search="@ViewData["CurrentSearch"]"
+                   class="text-dark text-decoration-none">
+                    ID
+                    @if (currentSort == "id")
+                    {
+                        <i class="bi @(currentOrder == "asc" ? "bi-sort-up" : "bi-sort-down")"></i>
+                    }
+                    else
+                    {
+                        <i class="bi bi-arrow-down-up small"></i>
+                    }
+                </a>
+
+            </th>
+            <th class="text-center">
+                <a asp-action="GetProducts"
+                   asp-route-sortColumn="name"
+                   asp-route-sortOrder="@(currentSort == "name" && currentOrder == "asc" ? "desc" : "asc")"
+                   asp-route-search="@ViewData["CurrentSearch"]"
+                   class="text-dark text-decoration-none">
+                    Name
+                    @if (currentSort == "name")
+                    {
+                        <i class="bi @(currentOrder == "asc" ? "bi-sort-up" : "bi-sort-down")"></i>
+                    }
+                    else
+                    {
+                        <i class="bi bi-arrow-down-up small"></i>
+                    }
+                </a>
+            </th>
+            <th class="text-center">
+                <a asp-action="GetProducts"
+                   asp-route-sortColumn="brand"
+                   asp-route-sortOrder="@(currentSort == "brand" && currentOrder == "asc" ? "desc" : "asc")"
+                   asp-route-search="@ViewData["CurrentSearch"]"
+                   class="text-dark text-decoration-none">
+                   Brand
+                    @if (currentSort == "brand")
+                    {
+                        <i class="bi @(currentOrder == "asc" ? "bi-sort-up" : "bi-sort-down")"></i>
+                    }
+                    else
+                    {
+                        <i class="bi bi-arrow-down-up small"></i>
+                    }
+                </a>
+            </th>
+            <th class="text-center">
+                <a asp-action="GetProducts"
+                   asp-route-sortColumn="category"
+                   asp-route-sortOrder="@(currentSort == "category"  && currentOrder == "asc" ? "desc" : "asc")"
+                   asp-route-search="@ViewData["CurrentSearch"]"
+                   class="text-dark text-decoration-none">
+                    Category
+                    @if (currentSort == "category")
+                    {
+                        <i class="bi @(currentOrder == "asc" ? "bi-sort-up" : "bi-sort-down")"></i>
+                    }
+                    else
+                    {
+                        <i class="bi bi-arrow-down-up small"></i>
+                    }
+               </a>
+            </th>
+            <th class="text-center">
+                <a asp-action="GetProducts"
+                   asp-route-sortColumn="price"
+                   asp-route-sortOrder="@(currentSort == "price" && currentOrder == "asc" ? "desc" : "asc")"
+                   asp-route-search="@ViewData["CurrentSearch"]"
+                   class="text-dark text-decoration-none">
+                    Price
+                    @if (currentSort == "price")
+                    {
+                        <i class="bi @(currentOrder == "asc" ? "bi-sort-up" : "bi-sort-down")"></i>
+                    }
+                    else
+                    {
+                        <i class="bi bi-arrow-down-up small"></i>
+                    }
+               </a>
+            </th>
             <th class="text-center">Image</th>
-            <th class="text-center">Date Added</th>
+            <th class="text-center">
+                <a asp-action="GetProducts"
+                   asp-route-sortColumn="dateadded"
+                   asp-route-sortOrder="@(currentSort == "dateadded" && currentOrder == "asc" ? "desc" : "asc")"
+                   asp-route-search="@ViewData["CurrentSearch"]"
+                   class="text-dark text-decoration-none">
+                    Date Added
+                    @if (currentSort == "dateadded")
+                    {
+                        <i class="bi @(currentOrder == "asc" ? "bi-sort-up" : "bi-sort-down")"></i>
+                    }
+                    else
+                    {
+                        <i class="bi-sort-down"></i>
+                    }
+                </a>
+            </th>
             <th></th>
         </tr>
     </thead>
