--- a/ValueTechNZ_Final/Views/Products/GetProducts.cshtml
+++ b/ValueTechNZ_Final/Views/Products/GetProducts.cshtml
@@ -10,7 +10,7 @@
 
 <partial name="_Notification" />
 
-<h2 class="text-center mb-5">@ViewData["Title"]</h2>
+<h2 class="text-center mb-5 mt-3">@ViewData["Title"]</h2>
 
 <div class="row mb-5">
     <div class="col">
