--- a/ValueTechNZ_Final/Views/Home/Index.cshtml
+++ b/ValueTechNZ_Final/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model ValueTechNZ_Final.Models.Dto.GetProductsDto
+﻿@model List<ValueTechNZ_Final.Models.Dto.GetProductsDto>
 
 @{
     ViewData["Title"] = "Home Page";
@@ -34,3 +34,62 @@
         </div>
     </div>
 </div>
+
+<div class="bg-light">
+    <div class="container py-4">
+        <h2 class="mt-3">Latest Products</h2>
+
+        <div class="row mt-4 mb-5 g-3">
+            @foreach (var product in Model)
+            {
+                <div class="col-lg-3 col-md-6">
+                    <div class="d-flex flex-column justify-content-between rounded border shadow p-3 text-center h-100">
+                        <img src="/images/@product.ImageFileName" class="img-fluid" style="max-height: 180px; object-fit:contain;" />
+                        <hr />
+                        <h5 class="py-2">@product.ProductName</h5>
+                        <p>
+                            Brand: @product.Brand, Category: @product.CategoryName
+                        </p>
+                        <h4 class="mb-3">@(product.Price)$</h4>
+                        <div class="d-flex justify-content-center">
+                            <a class="btn btn-primary btn-sm mb-2" asp-controller="Products" asp-action="GetProductDetails" asp-route-id="@product.ProductId" role="button">Details</a>
+                            <button type="button" class="btn btn-warning btn-sm mb-2 ms-2">
+                                Add to Cart<i class="bi bi-cart4"></i>
+                            </button>
+                        </div>
+
+                    </div>
+                </div>
+            }
+        </div>
+    </div>
+
+    <div class="container py-4">
+        <h2 class="mt-3">Cheapest Products(Need to fix : Get Cheapest products)</h2>
+
+        <div class="row mt-4 mb-5 g-3">
+            @foreach (var product in Model)
+            {
+                <div class="col-lg-3 col-md-6">
+                    <div class="d-flex flex-column justify-content-between rounded border shadow p-3 text-center h-100">
+                        <img src="/images/@product.ImageFileName" class="img-fluid" style="max-height: 180px; object-fit:contain;" />
+                        <hr />
+                        <h5 class="py-2">@product.ProductName</h5>
+                        <p>
+                            Brand: @product.Brand, Category: @product.CategoryName
+                        </p>
+                        <h4 class="mb-3">@(product.Price)$</h4>
+                        <div class="d-flex justify-content-center">
+                            <a class="btn btn-primary btn-sm mb-2" asp-controller="Products" asp-action="GetProductDetails" asp-route-id="@product.ProductId" role="button">Details</a>
+                            <button type="button" class="btn btn-warning btn-sm mb-2 ms-2">
+                                Add to Cart<i class="bi bi-cart4"></i>
+                            </button>
+                        </div>
+
+                    </div>
+                </div>
+            }
+        </div>
+    </div>
+</div>
+
