--- a/ValueTechNZ_Final/Views/Products/GetProducts.cshtml
+++ b/ValueTechNZ_Final/Views/Products/GetProducts.cshtml
@@ -154,7 +154,7 @@
                 <td class="text-center">@(product.DateAdded.ToString("MM//dd//yyyy"))</td>
                 <td class="text-center">
                     <a class="btn btn-primary btn-sm" asp-controller="Products" asp-action="EditProduct" asp-route-id="@product.ProductId">Edit</a>
-                    <a class="btn btn-danger btn-sm" asp-controller="Products" asp-action="Delete" asp-route-id="@product.ProductId" onclick="return confirm('Are you sure you want to delete this product?')">Delete</a>
+                    <a class="btn btn-danger btn-sm" asp-controller="Products" asp-action="DeleteProduct" asp-route-id="@product.ProductId" onclick="return confirm('Are you sure you want to delete this product?')">Delete</a>
                 </td>
             </tr>
         }
