Add user list page

--- a/ValueTechNZ_Final/Views/Store/Index.cshtml
+++ b/ValueTechNZ_Final/Views/Store/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@using ValueTechNZ_Final.Helpers;
 @model PaginatedList<ValueTechNZ_Final.Models.Dto.GetProductsDto>
 @{
-    ViewData["Title"] = "Our Products";
+    ViewData["Title"] = "Products";
     var currentSearch = ViewData["CurrentSearch"] as string;
     ViewBag.CurrentBrand = ViewBag.CurrentBrand ?? "";
     ViewBag.CurrentCategory = ViewBag.CurrentCategory ?? "";
