--- a/ValueTechNZ_Final/Views/Shared/_LoginPartial.cshtml
+++ b/ValueTechNZ_Final/Views/Shared/_LoginPartial.cshtml
@@ -14,10 +14,13 @@
           </a>
           <ul class="dropdown-menu">
             <li>
-                <a class="dropdown-item nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Manage Account</a>
+                <a class="dropdown-item nav-link text-dark" asp-controller="Products" asp-action="GetProducts">Products</a>
             </li>
             <li>
-                <a class="dropdown-item nav-link text-dark" asp-controller="Products" asp-action="GetProducts">Products</a>
+                <a class="dropdown-item nav-link text-dark" asp-controller="Users" asp-action="Index">Users</a>
+            </li>
+            <li>
+                <a class="dropdown-item nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Manage Account</a>
             </li>
           </ul>
         </li>
