--- a/ValueTechNZ_Final/Views/Users/Index.cshtml
+++ b/ValueTechNZ_Final/Views/Users/Index.cshtml
@@ -1,9 +1,11 @@
-﻿@model List<ApplicationUser>
+﻿@using ValueTechNZ_Final.Helpers;
+@model PaginatedList<ApplicationUser>
 @using Microsoft.AspNetCore.Identity;
 @inject UserManager<ApplicationUser> UserManager
 
 @{
     ViewData["Title"] = "List of Users";
+    ViewData["PaginationAction"] = "Index";
 }
 
 <h2 class="text-center mb-5">@ViewData["Title"]</h2>
@@ -19,7 +21,7 @@
         </tr>
     </thead>
     <tbody>
-        @foreach(var user in Model)
+        @foreach(var user in Model.Items)
         {
             <tr>
                 <td>@(user.FirstName + "" + user.LastName)</td>
@@ -46,3 +48,5 @@
         }
     </tbody>
 </table>
+
+<partial name="_Pagination" />
