Add edit role modal

--- a/ValueTechNZ_Final/Views/Products/EditProduct.cshtml
+++ b/ValueTechNZ_Final/Views/Products/EditProduct.cshtml
@@ -70,7 +70,7 @@
                     <button type="submit" class="btn btn-primary">Update</button>
                 </div>
                 <div class="col-sm-4">
-                    <a class="btn btn-secondary" asp-controller="Products" asp-action="Products">Cancel</a>
+                    <a class="btn btn-secondary" asp-controller="Products" asp-action="GetProducts">Cancel</a>
                 </div>
             </div>
         </form>
