--- a/ValueTechNZ_Final/Views/Users/UserDetails.cshtml
+++ b/ValueTechNZ_Final/Views/Users/UserDetails.cshtml
@@ -3,6 +3,8 @@
     ViewData["Title"] = "User Details";
 }
 
+<partial name="_Notification" />
+
 <div class="row">
     <div class="col-lg-6 mx-auto rounded border p-4">
         <h2 class="text-center mb-3">@ViewData["Title"]</h2>
