--- a/ValueTechNZ_Final/Views/Users/UserDetails.cshtml
+++ b/ValueTechNZ_Final/Views/Users/UserDetails.cshtml
@@ -59,10 +59,11 @@
 
         <div>
             <a class="btn btn-primary" asp-controller="Users" asp-action="Index">Back</a>
-            <button type="button" class="btn btn-danger">Delete</button>
+            <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#deleteUserModal">Delete</button>
         </div>
     </div>
 </div>
 
 
 <partial name="_EditRoleModal" />
+<partial name="_DeleteUserModal" />
