--- a/ValueTechNZ_Final/Views/Home/Index.cshtml
+++ b/ValueTechNZ_Final/Views/Home/Index.cshtml
@@ -65,10 +65,10 @@
     </div>
 
     <div class="container py-4">
-        <h2 class="mt-3">Cheapest Products(Need to fix : Get Cheapest products)</h2>
+        <h2 class="mt-3">Cheapest Products</h2>
 
         <div class="row mt-4 mb-5 g-3">
-            @foreach (var product in Model)
+            @foreach (var product in ViewBag.CheapestProducts)
             {
                 <div class="col-lg-3 col-md-6">
                     <div class="d-flex flex-column justify-content-between rounded border shadow p-3 text-center h-100">
