--- a/ValueTechNZ_Final/Views/Store/Index.cshtml
+++ b/ValueTechNZ_Final/Views/Store/Index.cshtml
@@ -67,7 +67,7 @@
                         <h4 class="mb-3">@(product.Price)$</h4>
                         <div class="d-flex justify-content-center">
                             <a class="btn btn-primary btn-sm mb-2" asp-controller="Store" asp-action="GetProductDetails" asp-route-id="@product.ProductId" role="button">Details</a>
-                            <button type="button" class="btn btn-warning btn-sm mb-2 ms-2">
+                            <button type="button" class="btn btn-warning btn-sm mb-2 ms-2" onclick="addToCart(this, @product.ProductId)">
                                 Add to Cart<i class="bi bi-cart4"></i>
                             </button>
                         </div>
