--- a/ValueTechNZ_Final/Views/Shared/_Layout.cshtml
+++ b/ValueTechNZ_Final/Views/Shared/_Layout.cshtml
@@ -15,76 +15,72 @@
 </head>
 <body>
     <script>
-        function getShoppingCart() {
-            const cookieName = "shopping_cart=";
-            let cookiesArray = document.cookie.split(';');
+         function getShoppingCart() {
+             // document.cookie contains all the cookies of our website with the following format
+             // cookie1=value1; cookie2=value2; cookie3=value3;
 
-            for (let i = 0; i < cookiesArray.length; i++) {
-                let cookie = cookiesArray[i].trim();
-                if (cookie.startsWith(cookieName)) {
-                    let cookie_value = cookie.substring(cookieName.length);
+             const cookieName = "shopping_cart";
+             let cookiesArray = document.cookie.split(';');
 
-                    // Only try to parse base64 cookies starting with 'ey'
-                    if (cookie_value.startsWith('ey')) {
-                        try {
-                            return JSON.parse(atob(cookie_value));
-                        }
-                        catch {
-                            continue;
-                        }
-                    }
-                }
-            }
+             for (let i = 0; i < cookiesArray.length; i++) {
+                 let cookie = cookiesArray[i];
+                 if (cookie.includes(cookieName)) {
+                     let cookie_value = cookie.substring(cookie.indexOf("=") + 1);
+             
+                     try {
+                         let cart = JSON.parse(atob(cookie_value));
+                         return cart;
+                     }
+                     catch (exception) {
+                         break;
+                     }
+                 }
+             }
 
-            return {};
-        }
+             return {};
+         }
 
-        function saveCart(cart) {
-            let cartStr = btoa(JSON.stringify(cart))
-            let d = new Date();
-            d.setDate(d.getDate() + 365);
-            let expires = d.toUTCString();
-            document.cookie = "shopping_cart=" + cartStr + ";expires=" + expires + ";path=/; SameSite=Strict; Secure";
-        }
 
-        function addToCart(button, id) {
-            let cart = getShoppingCart();
-            let quantity = cart[id]
+         function saveCart(cart) {
+             let cartStr = btoa(JSON.stringify(cart))
 
-            if (isNaN(quantity)) {
-                cart[id] = 1
-            }
-            else {
-                cart[id] = Number(quantity) + 1;
-            }
+             // save cookie
+             let d = new Date();
+             d.setDate(d.getDate() + 365); // this cookie expires after 365 days (1 year)
+             let expires = d.toUTCString();
+             document.cookie = "shopping_cart=" + cartStr + ";expires=" + expires + ";path=/; SameSite=Strict; Secure";
+         }
 
-            saveCart(cart);
-            button.innerHTML = "Added <i class='bi bi-check-lg'></i>";
 
-            let cartSize = 0;
-            for (var cartItem of Object.entries(cart)) {
-                quantity = cartItem[1]
-                if (isNaN(quantity)) continue;
 
-                cartSize += Number(quantity)
-            }
+         function addToCart(button, id) {
+             let cart = getShoppingCart();
 
-            document.getElementById("cartSize").innerHTML = cartSize;
-        }
+             let quantity = cart[id]
+             if (isNaN(quantity)) {
+                 // quantity is Not a Number => set quantity to 1
+                 cart[id] = 1
+             }
+             else {
+                 cart[id] = Number(quantity) + 1;
+             }
 
-        window.onload = function () {
-            let cart = getShoppingCart();
-            let cartSize = 0;
+             saveCart(cart);
+             button.innerHTML = "Added <i class='bi bi-check-lg'></i>";
 
-            for (var cartItem of Object.entries(cart)) {
-                let quantity = cartItem[1]
-                if (isNaN(quantity)) continue;
-                cartSize += Number(quantity)
-            }
+             let cartSize = 0;
+             for (var cartItem of Object.entries(cart)) {
+                 quantity = cartItem[1]
+                 if (isNaN(quantity)) continue;
 
-            document.getElementById("cartSize").innerHTML = cartSize;
-        }
+                 cartSize += Number(quantity)
+             }
+
+             document.getElementById("cartSize").innerHTML = cartSize
+         }
+
     </script>
+
 
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow">
