--- a/ValueTechNZ_Final/Views/Shared/_LoginPartial.cshtml
+++ b/ValueTechNZ_Final/Views/Shared/_LoginPartial.cshtml
@@ -17,6 +17,9 @@
                 <a class="dropdown-item nav-link text-dark" asp-controller="Products" asp-action="GetProducts">Products</a>
             </li>
             <li>
+                <a class="dropdown-item nav-link text-dark" asp-controller="AdminOrders" asp-action="Index">Orders</a>
+            </li>
+            <li>
                 <a class="dropdown-item nav-link text-dark" asp-controller="Users" asp-action="Index">Users</a>
             </li>
             <li>
