--- a/ValueTechNZ_Final/Views/AdminOrders/Index.cshtml
+++ b/ValueTechNZ_Final/Views/AdminOrders/Index.cshtml
@@ -1,9 +1,13 @@
-﻿
+﻿@using ValueTechNZ_Final.Helpers
+@model PaginatedList<Order>
 @{
+    ViewData["Title"] = "Orders";
+    ViewData["PaginationAction"] = "Index";
 }
 
-<h3 class="text-center mb-4">List of Orders</h3>
+<partial name="_Notification" />
 
+<h3 class="text-center mb-4">List of Orders</h3>
 <table class="table">
     <thead>
         <tr>
@@ -19,62 +23,68 @@
         </tr>
     </thead>
     <tbody>
-        @foreach(var order in ViewBag.Orders)
+        @if (Model == null || Model.Items.Count == 0)
         {
-
-            int count = 0;
-            decimal total = order.ShippingFee;
-            foreach(OrderItem item in order.Items)
-            {
-                count += item.Quantity;
-                total += item.Quantity * item.UnitPrice;
-            }
-
-            string paymentBadgeColor = "text-bg-danger";
-            if(order.PaymentStatus == "pending")
-            {
-                paymentBadgeColor = "text-bg-warning text-dark";
-            }
-            else if (order.PaymentStatus == "accepted")
-            {
-                paymentBadgeColor = "text-bg-success";
-            }
-            else if (order.PaymentStatus == "canceled")
-            {
-                paymentBadgeColor = "text-bg-secondary";
-            }
-
-            string orderBadgeColor = order.OrderStatus switch
-            {
-                "created" => "text-bg-danger",
-                "accepted" => "text-bg-warning text-dark",
-                "canceled" => "text-bg-secondary",
-                "shipped" => "text-bg-primary",
-                "delivered" => "text-bg-success",
-                "returned" => "text-bg-info text-dark",
-                "deleted" => "text-bg-dark",
-                _ => "text-bg-light" // Default case if none of the above matches
-            };
-
-
             <tr>
-                <td>@order.Id</td>
-                <td>@(order.Client.FirstName + " " + order.Client.LastName)</td>
-                <td>@count</td>
-                <td>@(total)$</td>
-                <td>@order.PaymentMethod</td>
-                <td>
-                    <span class="badge @paymentBadgeColor">@order.PaymentStatus</span>
-                </td>
-                <td>
-                    <span class="badge @orderBadgeColor"> @order.OrderStatus</span>
-                </td>
-                <td>@order.CreatedAt.ToString("MM/dd/yyyy")</td>
-                <td>
-                    <a class="btn btn-primary btn-sm" asp-controller="AdminOrders" asp-action="details"
-                       asp-route-id="@order.Id">Details</a>
-                </td>
+                <td class="text-center" colspan="9">No Orders Available</td>
             </tr>
+        }
+        else
+        {
+            @foreach (var order in Model.Items)
+            {
+                int count = 0;
+                decimal total = order.ShippingFee;
+                foreach (OrderItem item in order.Items)
+                {
+                    count += item.Quantity;
+                    total += item.Quantity * item.UnitPrice;
+                }
+                string paymentBadgeColor = "text-bg-danger";
+                if (order.PaymentStatus == "pending")
+                {
+                    paymentBadgeColor = "text-bg-warning text-dark";
+                }
+                else if (order.PaymentStatus == "accepted")
+                {
+                    paymentBadgeColor = "text-bg-success";
+                }
+                else if (order.PaymentStatus == "canceled")
+                {
+                    paymentBadgeColor = "text-bg-secondary";
+                }
+                string orderBadgeColor = order.OrderStatus switch
+                {
+                    "created" => "text-bg-danger",
+                    "accepted" => "text-bg-warning text-dark",
+                    "canceled" => "text-bg-secondary",
+                    "shipped" => "text-bg-primary",
+                    "delivered" => "text-bg-success",
+                    "returned" => "text-bg-info text-dark",
+                    "deleted" => "text-bg-dark",
+                    _ => "text-bg-light"
+                };
+                <tr>
+                    <td class="text-center">@order.Id</td>
+                    <td class="text-center">@(order.Client.FirstName + " " + order.Client.LastName)</td>
+                    <td class="text-center">@count</td>
+                    <td class="text-center">@(total)$</td>
+                    <td class="text-center">@order.PaymentMethod</td>
+                    <td class="text-center">
+                        <span class="badge @paymentBadgeColor">@order.PaymentStatus</span>
+                    </td>
+                    <td class="text-center">
+                        <span class="badge @orderBadgeColor"> @order.OrderStatus</span>
+                    </td>
+                    <td class="text-center">@order.CreatedAt.ToString("MM/dd/yyyy")</td>
+                    <td class="text-center">
+                        <a class="btn btn-primary btn-sm" asp-controller="AdminOrders" asp-action="details"
+                           asp-route-id="@order.Id">Details</a>
+                    </td>
+                </tr>
+            }
         }
     </tbody>
 </table>
+
+<partial name="_Pagination" />
