Add order details page

--- a/ValueTechNZ_Final/Views/AdminOrders/Index.cshtml
+++ b/ValueTechNZ_Final/Views/AdminOrders/Index.cshtml
@@ -78,7 +78,7 @@
                     </td>
                     <td class="text-center">@order.CreatedAt.ToString("MM/dd/yyyy")</td>
                     <td class="text-center">
-                        <a class="btn btn-primary btn-sm" asp-controller="AdminOrders" asp-action="details"
+                        <a class="btn btn-primary btn-sm" asp-controller="AdminOrders" asp-action="Details"
                            asp-route-id="@order.Id">Details</a>
                     </td>
                 </tr>
