Add client order details page

--- a/ValueTechNZ_Final/Views/ClientOrders/Index.cshtml
+++ b/ValueTechNZ_Final/Views/ClientOrders/Index.cshtml
@@ -74,7 +74,7 @@
                     </td>
                     <td class="text-center">@order.CreatedAt.ToString("MM/dd/yyyy")</td>
                     <td class="text-center">
-                        <a class="btn btn-primary btn-sm" asp-controller="ClientOrder" asp-action="Details"
+                        <a class="btn btn-primary btn-sm" asp-controller="ClientOrders" asp-action="Details"
                            asp-route-id="@order.Id">Details</a>
                     </td>
                 </tr>
