--- a/ValueTechNZ_Final/Views/AdminOrders/Details.cshtml
+++ b/ValueTechNZ_Final/Views/AdminOrders/Details.cshtml
@@ -247,7 +247,7 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-                <p>@Model.PaymentDetails</p>
+                <p style="white-space: pre-wrap; font-family: monospace">@Html.Raw(Model.PaymentDetails)</p>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
